--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -26,6 +26,9 @@ config USB_ARCH_HAS_OHCI
 	# MIPS:
 	default y if MIPS_ALCHEMY
 	default y if MACH_JZ4740
+	default y if LS1A_MACH
+	default y if LS1B_MACH
+	default y if LS1C_MACH
 	# more:
 	default PCI
 
@@ -47,7 +50,9 @@ config USB_ARCH_HAS_EHCI
 	default y if MICROBLAZE
 	default y if SPARC_LEON
 	default y if ARCH_MMP
-	default y if MACH_LOONGSON1
+	default y if LS1A_MACH
+	default y if LS1B_MACH
+	default y if LS1C_MACH
 	default PCI
 
 # some non-PCI HCDs implement xHCI
